# rust-api-actix-web

./: .dockerignore  .gitignore  Cargo.toml  Makefile.toml  NOTE.md  README.md  api-test.http  compose.yml  diesel.toml
.githooks/: pre-commit
adapter/migrations/2025-04-17-092847_create_users/: up.sql
docker/ecr/: Dockerfile
docker/rust/: Dockerfile
